# vintch-v1-model

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py  index.md  index.rst  references.bib
docs/source/examples/: fitting_script.py
docs/source/notebooks/: cells.md  first_nb.md  mad_test.md
src/vintch_model/: __init__.py  backend_config.py  base_backend.py  nonlinearity.py  plotting.py  subunit_model.py  utils.py
tests/: test_backend_config.py  test_nonlinearity.py  test_subunit_model.py
